update swagger comment
